<resources>
    <string name="app_name">Green Passport</string>
    <string name="PersonName">First name</string>
    <string name="SecondName">Second name</string>
    <string name="LoginBtn">Login</string>
    <string name="GoToDatabase">To vaccinations</string>
    <string name="DBase_welcome">Person database management screen</string>
    <string name="DBase_test_welcome">Test database management screen</string>
    <string name="Antibodies">Antibodies detected</string>
    <string name="ToTests">To tests</string>
    <string name="IDNPNumber">IDNP</string>
    <string name="vacc">Vaccine name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">%1$s %2$s</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="add_button">Add</string>
    <string name="date">Date of vaccination</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Vaccinations</string>
    <string name="menu_tests">Tests</string>
    <string name="db_test_result">Test result</string>
    <string name="db_test_date">Test date</string>
    <string name="GREEN">#BE0F9E27</string>
    <string name="RED">#D3E61405</string>
    <string name="STANDARD">#FAFAFA</string>
    <string name="delete">Delete</string>
    <string name="generate">Get QR</string>
    <string name="qr_code_for_last_vaccination">QR code for last vaccination</string>
    <string name="qr_code_for_last_test">QR code for last test</string>
    <string name="first_name">First name:</string>
    <string name="second_name">Second name:</string>
    <string name="idnp">IDNP:</string>
    <string name="vaccination_database_management_screen">Vaccination database management screen</string>
    <string name="personal_code">Personal code</string>
    <string name="laboratory_name">Laboratory name</string>
    <string name="vaccine_series">Vaccine series</string>
    <string name="vaccination_date">Vaccination date</string>
    <string name="pCode_view">Personal code:</string>
    <string name="to_person_database">To person database</string>
    <string name="title_activity_logged_in_2nd">2ndactivity_label</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="no_vaccs">No vaccinations found</string>
    <string name="no_tests">No tests found</string>
    <string name="vacc_details" translatable="false">Vaccination details:\n</string>
    <string name="test_details" translatable="false">Test details:\n</string>
    <string name="latest_vacc_qr">Latest vaccine QR code (%1$s)</string>
    <string name="latest_test_qr">Latest test QR code (%1$s)</string>
    <string name="this_test">QR code for test dated %1$s</string>
    <string name="this_vacc">QR code for vaccination dated %1$s</string>
    <string name="tHistory">Test history</string>
    <string name="vHistory">Vaccination history</string>
    <string name="locale_lang">Language: </string>
    <string name="test_pos">Positive</string>
    <string name="test_neg">Negative</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="exception">A person with this data is not in the database</string>
</resources>