<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sqliteapp.ui.home.ProfileFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_tests"
        android:name="com.example.sqliteapp.ui.tests.TestsFragment"
        android:label="@string/menu_tests"
        tools:layout="@layout/fragment_tests" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sqliteapp.ui.gallery.VaccinationsFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_vaccinations" />


</navigation>